        How can transfinite be made to work when start is on bounds?
	To work when end is on bounds?
      o Rcgmin seems to report reset of parameters to bounds when parameter
        is apparently on the bound. Could have rounding issues, and should
        avoid this warning if it is really not needed.
      o ?? Agreed. Do NOT add ipoptr until non-standard install is fixed up.
#?? seems hjkb and hjn fail kkt2
      o does old "optimx" do the kkt checks correctly for maxfn()??


===================================================================================
NEWS from the optimx package

Some comments apply to deprecated packages optimr on CRAN and optimrx on R-forge

VERSION 2021-??
      o 'convcode' replaced by 'convergence' in opm.Rd
      o lbfgs does NOT report fevals and gevals -- put in optimr documentation
      o opm() adjusted so snewton and snewtonm removed from method list when hess()
        not provided (==NULL)
      o fixed three cases where setting control$maximize=TRUE was failing to set
        final function value correctly
      o removed printout of trace from Rvmminb()
      o minor edits for grammar in snewton.Rd
      o moved some tests to ./inst/doc/examples and tidied the files
      o optimx routines did not check for NULL gradient or hessian routine gr 
        and would fail in some instances. Check for missing routines now included,
        and optimx.setup forces ugr and uhess NULL if necessary.
      o trig1507.R moved from tests to inst/doc/examples/ as the multiple minima 
	generated are unsuitable as tests

VERSION 2020-01-18
      o This version does not call some non-CRAN packages.

VERSION 2019-12-02
      o Replaced all instances of tests on class() with inherits()
      o Replaced calls to lbfgsb3 package with those to lbfgsb3c,
        and removed calls to the lbfgsb3() function
      o Needed to set fval to NA in fnchk when length > 1

VERSION 2018-07-10
      o Added proptimr() compact display of result of optimr