@@ -25,7 +25,7 @@ TODO
         is apparently on the bound. Could have rounding issues, and should
         avoid this warning if it is really not needed.
       o ?? Agreed. Do NOT add ipoptr until non-standard install is fixed up.
-#?? seems hjkb and hjn fail kkt2
+#?? seems hjkb and hjn fail kkt2 for maxfn -- WHY!!!???
       o does old "optimx" do the kkt checks correctly for maxfn()??
 
 
@@ -35,6 +35,7 @@ NEWS from the optimx package
 Some comments apply to deprecated packages optimr on CRAN and optimrx on R-forge
 
 VERSION 2021-??
+      o call to hjn from optimr uses mcontrol, not control (maximize issue)
       o 'convcode' replaced by 'convergence' in opm.Rd
       o lbfgs does NOT report fevals and gevals -- put in optimr documentation
       o opm() adjusted so snewton and snewtonm removed from method list when hess()
